[package]
name = "leetcode-rs"
version = "0.1.0"
authors = ["Hourann <tdkgn@outlook.com>"]
edition = "2018"

[dependencies]


[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]